--- a/style.css
+++ b/style.css
@@ -17,3 +17,11 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+.left-slide {
+    height: 100vh;
+    width: 35%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
