work in progress - errors

--- a/style.css
+++ b/style.css
@@ -56,3 +56,30 @@ body {
     height: 100%;
     width: 100%;
 }
+
+.slider-container .action-buttons
+button {
+    position: absolute;
+    left: 35%
+    top: 50%;
+    z-index: 100;
+}
+
+.slider-container .action-buttons
+down-button {
+    transform: translateX(-100%);
+} 
+
+.slider-container .action-buttons
+up-button {
+    transform: translateY(-100%);
+} 
+
+button {
+    background-color: #fff;
+    border: none;
+    color: #aaa;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 15px;
+}
