--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    transition: transform 0.5s ease-in-out;
 }
 
 .left-slide > div {
@@ -33,6 +34,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: #fff;
 } 
 
 .left-slide h1 {
@@ -47,6 +49,7 @@ body {
     top: 0;
     left: 35%;
     width: 65%;
+    transition: transform 0.5s ease-in-out;
 }
 
 .right-slide > div {
@@ -57,24 +60,6 @@ body {
     width: 100%;
 }
 
-.slider-container .action-buttons
-button {
-    position: absolute;
-    left: 35%
-    top: 50%;
-    z-index: 100;
-}
-
-.slider-container .action-buttons
-down-button {
-    transform: translateX(-100%);
-} 
-
-.slider-container .action-buttons
-up-button {
-    transform: translateY(-100%);
-} 
-
 button {
     background-color: #fff;
     border: none;
@@ -83,3 +68,31 @@ button {
     font-size: 16px;
     padding: 15px;
 }
+
+button:hover {
+    color: #222;
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+.slider-container .action-buttons button {
+    position: absolute;
+    left: 35%;
+    top: 50%;
+    z-index: 100;
+}
+
+.slider-container .action-buttons .down-button {
+    transform: translateX(-100%);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+} 
+
+.slider-container .action-buttons .up-button {
+    transform: translateY(-100%);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+} 
+
