--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ body {
     margin-top: -30px;
 }
 
+.castle {
+    color: #222;
+}
+
+.snow-monkey {
+    color: #222;
+}
+
 .right-slide {
     height: 100%;
     position:absolute;
